i fixed a bug in google

--- a/go.html
+++ b/go.html
@@ -2,23 +2,23 @@
 <html>
     <head>
         <title>
-            IT prodigee
+            project
         </title>
         <link rel="stylesheet" href="go.css">
     </head>
 <body>
 <div class="nav">
-    <div>Elon Musk</div>
+    <div></div>
     <ul>
-        <li><a href="https://x.com/">x</a></li>
-        <li><a href="https://space x.com/">Space-x</a></li>
-        <li><a href="https://www.hyperlooptt.com/">Hyper loop</a></li>
-        <li><a href="https://www.boringcompany.com/">Boring Company</a></li>
-        <li><a href="https://www.starlink.com/.com/">Star Link</a></li>
-        <li><a href="https://neuralink.com/">neuralink</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="#">work</a></li>
+        <li><a href="#">resume</a></li>
+        <li><a href="#">contact</a></li>
     </ul>
 </div>
-<table border="1">
-</table>
+<footer>
+    <p>Author: Ayodele David</p>
+    <p><a href="mailto:dayodele101@gmail.com">dayodele101@gmail.com</a></p>
+</footer>
 </body>
 </html>
